apps/bgd/overlays/rollouts-route-demo/bgd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-stable-service
spec:
  ports: 
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector: 
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-canary-service
spec:
  ports: 
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector: 
    app: rollouts-demo
