apps/bgd/overlays/rollouts-route-demo/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rollouts-route-demo
spec:
  port:
    targetPort: http 
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: argo-rollouts-stable-service 
    weight: 100 
  alternateBackends:
    - kind: Service
      name: argo-rollouts-canary-service 
      weight: 0 
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rollouts-route-canary
spec:
  to:
    kind: Service
    name: argo-rollouts-canary-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
